<resources>
    <string name="app_name">DermoApp</string>
    <string name="main_description">Somo la plataforma que trae la dermatologia mas cerca de ti</string>
    <string name="main_signup_btn">Registrarse</string>
    <string name="main_login_btn">Iniciar sesión</string>
    <string name="main_image_description">Chica en un procedimiento dermatológico</string>
    <string name="form_signup_name">Nombre</string>
    <string name="form_signup_email">Email</string>
    <string name="form_signup_birth_day">Fecha de nacimiento</string>
    <string name="form_signup_city">Ciudad</string>
    <string name="form_signup_phone">Celular</string>
    <string name="form_signup_password">Contraseña</string>
    <string name="form_signup_confirm_password">Confirmación de contraseña</string>
    <string name="signup_btn_signup">Registrar</string>
    <string name="signup_terms">Al continuar acepta los terminos y condiciones</string>
    <string name="empty_field">Campo no puede estar vacio</string>
    <string name="mayus_field">Mayusculas activas</string>
    <string name="password_confirmation_does_not_match">Confirmación de contraseña no coincide</string>
    <string name="network_error">Hubo un error, verifique su conexión por favor</string>
    <string name="ok">OK</string>
    <string name="error">Error</string>
    <string name="form_login_email">Email</string>
    <string name="form_login_password">Contraseña</string>
    <string name="login_btn_login">Ingresar</string>
    <string name="btn_forgot_password">¿Olvidaste la contraseña?</string>
    <string name="home_menu">Inicio</string>
    <string name="account_menu">Cuenta</string>
    <string name="config_menu">Configuración</string>
    <string name="configuration_fragment_title">Configuración</string>
    <string name="account_fragment_title">Cuenta</string>
    <string name="home_fragment_title">Inicio</string>
    <string name="btn_update_configuration">Actualizar</string>
    <string name="btn_sign_out">Cerrar sesión</string>
    <string name="language">Idioma</string>
    <string name="configuration_city">Ciudad</string>
    <string name="spanish">Español</string>
    <string name="english">Ingles</string>
    <string name="btn_update_profile">Actualizar perfil</string>
    <string name="btn_create_new_consult">+ Crear nueva consulta</string>
    <string name="home_title">Mis consultas</string>
    <string name="consult_item_title">Consulta -</string>
    <string name="dont_have_consults">No tienes consultas en el momento</string>
    <string name="pending_status">PENDIENTE</string>
    <string name="confirmed_status">CONFIRMADO</string>
    <string name="rejected_status">RECHAZADO</string>
    <string name="detail_injury_type">Tipo de lesión</string>
    <string name="detail_injury_shape">Forma</string>
    <string name="detail_injury_count">Número de lesiones</string>
    <string name="detail_distribution">Distribución</string>
    <string name="detail_color">Color</string>
    <string name="detail_automatic">Diagnostico automatico</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="detail_diagnosis">Diagnostico</string>
    <string name="create">Crear</string>
    <string name="detail_photo">Foto</string>
    <string name="upload_photo_error">Error obteniendo la foto</string>
    <string name="accept">Aceptar</string>
    <string name="reject">Rechazar</string>
</resources>