<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/home"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        android:contentDescription="@string/main_image_description" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:text="@string/main_login_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btn_signup"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="20dp"
        />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:text="@string/main_signup_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/btn_login"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="20dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_description"
        app:layout_constraintBottom_toTopOf="@id/btn_signup"
        android:layout_marginBottom="20dp"
        android:layout_marginHorizontal="15dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textAlignment="center"
        android:background="@color/light_gray"
        android:padding="40dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>