<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomeFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp">

        <Button
            android:id="@+id/btnCreateConsult"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/btn_create_new_consult"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/homeTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_title"
            app:layout_constraintTop_toBottomOf="@id/btnCreateConsult"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/homeConsultsList"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/homeTitle"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:id="@+id/home_dont_have_consults_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/homeTitle"
            android:text="@string/dont_have_consults"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>